--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -4,9 +4,191 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css"
+      integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn"
+      crossorigin="anonymous"
+    />
+    <title>Almacén</title>
+    <link rel="stylesheet" href="/css/normalize.css" />
   </head>
   <body>
-    <h1>Almacén de productos</h1>
+    <div class="container-fluid">
+      <%- include('./partials/navbar')%>
+
+      <main>
+        <section class="section-televisor" id="televisor">
+          <h2 class="section-televisor_title mt-3 mb-3 text-center">
+            Televisores
+          </h2>
+
+          <div class="container">
+            <div class="row">
+              <div class="col">
+                <article class="card" style="width: 18rem">
+                  <a href="#">
+                    <img
+                      src="/images/televisores/samsung.jpg"
+                      class="card-img-top"
+                      alt="televisor"
+                    />
+                  </a>
+                  <div class="card-body">
+                    <h5 class="card-title">Pantalla Samsung</h5>
+                    <p class="card-text">Tipo de pantalla: LED</p>
+                    <p class="card-text">Tamaño de pantalla: 55 pulgadas</p>
+                  </div>
+                </article>
+              </div>
+              <div class="col">
+                <article class="card" style="width: 18rem">
+                  <a href="#">
+                    <img
+                      src="/images/televisores/samsung.jpg"
+                      class="card-img-top"
+                      alt="televisor"
+                    />
+                  </a>
+                  <div class="card-body">
+                    <h5 class="card-title">Pantalla Samsung</h5>
+                    <p class="card-text">Tipo de pantalla: LED</p>
+                    <p class="card-text">Tamaño de pantalla: 55 pulgadas</p>
+                  </div>
+                </article>
+              </div>
+              <div class="col">
+                <article class="card" style="width: 18rem">
+                  <a href="#">
+                    <img
+                      src="/images/televisores/samsung.jpg"
+                      class="card-img-top"
+                      alt="televisor"
+                    />
+                  </a>
+                  <div class="card-body">
+                    <h5 class="card-title">Pantalla Samsung</h5>
+                    <p class="card-text">Tipo de pantalla: LED</p>
+                    <p class="card-text">Tamaño de pantalla: 55 pulgadas</p>
+                  </div>
+                </article>
+              </div>
+            </div>
+          </div>
+        </section>
+
+        <section class="section-laptops" id="laptops">
+          <h2 class="section-laptops_title mt-3 mb-3 text-center">Laptops</h2>
+          <div class="container">
+            <div class="row">
+              <div class="col">
+                <article class="card" style="width: 18rem">
+                  <a href="#">
+                    <img
+                      src="/images/laptops/asus.jpg"
+                      class="card-img-top"
+                      alt="laptops"
+                    />
+                  </a>
+                  <div class="card-body">
+                    <h5 class="card-title">Laptops ASUS</h5>
+                    <p class="card-text">Procesador: Intel</p>
+                    <p class="card-text">Memoria Ram: 8 GB</p>
+                  </div>
+                </article>
+              </div>
+              <div class="col">
+                <article class="card" style="width: 18rem">
+                  <a href="#">
+                    <img
+                      src="/images/laptops/asus.jpg"
+                      class="card-img-top"
+                      alt="laptops"
+                    />
+                  </a>
+                  <div class="card-body">
+                    <h5 class="card-title">Laptops ASUS</h5>
+                    <p class="card-text">Procesador: Intel</p>
+                    <p class="card-text">Memoria Ram: 8 GB</p>
+                  </div>
+                </article>
+              </div>
+              <div class="col">
+                <article class="card" style="width: 18rem">
+                  <a href="#">
+                    <img
+                      src="/images/laptops/asus.jpg"
+                      class="card-img-top"
+                      alt="laptops"
+                    />
+                  </a>
+                  <div class="card-body">
+                    <h5 class="card-title">Laptops ASUS</h5>
+                    <p class="card-text">Procesador: Intel</p>
+                    <p class="card-text">Memoria Ram: 8 GB</p>
+                  </div>
+                </article>
+              </div>
+            </div>
+          </div>
+        </section>
+
+        <section class="section-zapatos" id="zapatos">
+          <h2 class="section-laptops_title mt-3 mb-3 text-center">Zapatos</h2>
+          <div class="container">
+            <div class="row">
+              <div class="col">
+                <article class="card" style="width: 18rem">
+                  <a href="#">
+                    <img
+                      src="/images/zapatos/Suede.jpg"
+                      class="card-img-top"
+                      alt="laptops"
+                    />
+                  </a>
+                  <div class="card-body">
+                    <h5 class="card-title">Zapatos Suede</h5>
+                    <p class="card-text">Material: Piel</p>
+                    <p class="card-text">Número: 8</p>
+                  </div>
+                </article>
+              </div>
+              <div class="col">
+                <article class="card" style="width: 18rem">
+                  <a href="#">
+                    <img
+                      src="/images/zapatos/Suede.jpg"
+                      class="card-img-top"
+                      alt="laptops"
+                    />
+                  </a>
+                  <div class="card-body">
+                    <h5 class="card-title">Zapatos Suede</h5>
+                    <p class="card-text">Material: Piel</p>
+                    <p class="card-text">Número: 8</p>
+                  </div>
+                </article>
+              </div>
+              <div class="col">
+                <article class="card" style="width: 18rem">
+                  <a href="#">
+                    <img
+                      src="/images/zapatos/Suede.jpg"
+                      class="card-img-top"
+                      alt="laptops"
+                    />
+                  </a>
+                  <div class="card-body">
+                    <h5 class="card-title">Zapatos Suede</h5>
+                    <p class="card-text">Material: Piel</p>
+                    <p class="card-text">Número: 8</p>
+                  </div>
+                </article>
+              </div>
+            </div>
+          </div>
+        </section>
+      </main>
+    </div>
   </body>
 </html>
