se lograron mostrar los elementos de la base de datos

--- a/src/views/products/laptops.ejs
+++ b/src/views/products/laptops.ejs
@@ -22,54 +22,21 @@
           <h2 class="section-laptops_title mt-3 mb-3 text-center">Laptops</h2>
           <div class="container">
             <div class="row">
+              <% for (let laptop of laptops ) { %>
               <div class="col">
                 <article class="card" style="width: 18rem">
                   <a href="#">
-                    <img
-                      src="/images/laptops/asus.jpg"
-                      class="card-img-top"
-                      alt="laptops"
-                    />
+                    <img src="/images/laptops/<%= laptop.imagen %>""
+                    class="card-img-top" alt="televisor" />
                   </a>
                   <div class="card-body">
-                    <h5 class="card-title">Laptops ASUS</h5>
+                    <h5 class="card-title"><%= laptop.nombre %></h5>
                     <p class="card-text">Procesador: Intel</p>
-                    <p class="card-text">Memoria Ram: 8 GB</p>
+                    <p class="card-text">Precio: $<%= laptop.precio %>MXN</p>
                   </div>
                 </article>
               </div>
-              <div class="col">
-                <article class="card" style="width: 18rem">
-                  <a href="#">
-                    <img
-                      src="/images/laptops/asus.jpg"
-                      class="card-img-top"
-                      alt="laptops"
-                    />
-                  </a>
-                  <div class="card-body">
-                    <h5 class="card-title">Laptops ASUS</h5>
-                    <p class="card-text">Procesador: Intel</p>
-                    <p class="card-text">Memoria Ram: 8 GB</p>
-                  </div>
-                </article>
-              </div>
-              <div class="col">
-                <article class="card" style="width: 18rem">
-                  <a href="#">
-                    <img
-                      src="/images/laptops/asus.jpg"
-                      class="card-img-top"
-                      alt="laptops"
-                    />
-                  </a>
-                  <div class="card-body">
-                    <h5 class="card-title">Laptops ASUS</h5>
-                    <p class="card-text">Procesador: Intel</p>
-                    <p class="card-text">Memoria Ram: 8 GB</p>
-                  </div>
-                </article>
-              </div>
+              <% } %>
             </div>
           </div>
         </section>
