--- a/src/views/products/zapatos.ejs
+++ b/src/views/products/zapatos.ejs
@@ -22,54 +22,21 @@
           <h2 class="section-laptops_title mt-3 mb-3 text-center">Zapatos</h2>
           <div class="container">
             <div class="row">
+              <% for (let zapato of zapatos ) { %>
               <div class="col">
                 <article class="card" style="width: 18rem">
                   <a href="#">
-                    <img
-                      src="/images/zapatos/Suede.jpg"
-                      class="card-img-top"
-                      alt="laptops"
-                    />
+                    <img src="/images/zapatos/<%= zapato.imagen %>""
+                    class="card-img-top" alt="televisor" />
                   </a>
                   <div class="card-body">
-                    <h5 class="card-title">Zapatos Suede</h5>
+                    <h5 class="card-title"><%= zapato.nombre %></h5>
                     <p class="card-text">Material: Piel</p>
-                    <p class="card-text">Número: 8</p>
+                    <p class="card-text">Precio: $<%= zapato.precio %>MXN</p>
                   </div>
                 </article>
               </div>
-              <div class="col">
-                <article class="card" style="width: 18rem">
-                  <a href="#">
-                    <img
-                      src="/images/zapatos/Suede.jpg"
-                      class="card-img-top"
-                      alt="laptops"
-                    />
-                  </a>
-                  <div class="card-body">
-                    <h5 class="card-title">Zapatos Suede</h5>
-                    <p class="card-text">Material: Piel</p>
-                    <p class="card-text">Número: 8</p>
-                  </div>
-                </article>
-              </div>
-              <div class="col">
-                <article class="card" style="width: 18rem">
-                  <a href="#">
-                    <img
-                      src="/images/zapatos/Suede.jpg"
-                      class="card-img-top"
-                      alt="laptops"
-                    />
-                  </a>
-                  <div class="card-body">
-                    <h5 class="card-title">Zapatos Suede</h5>
-                    <p class="card-text">Material: Piel</p>
-                    <p class="card-text">Número: 8</p>
-                  </div>
-                </article>
-              </div>
+              <% } %>
             </div>
           </div>
         </section>
